--- a/studentregister/src/main/webapp/WEB-INF/web.xml
+++ b/studentregister/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     <display-name>studentregister</display-name>
+    <servlet>
+    	<description>
+    	</description>
+    	<display-name>Student</display-name>
+    	<servlet-name>Student</servlet-name>
+    	<servlet-class>com.smartglossa.student.Student</servlet-class>
+    </servlet>
+    <servlet>
+    	<description>
+    	</description>
+    	<display-name>studentServlet</display-name>
+    	<servlet-name>studentServlet</servlet-name>
+    	<servlet-class>com.smartglossa.student.studentServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+    	<servlet-name>studentServlet</servlet-name>
+    	<url-pattern>/student</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
