--- a/studentregister/src/main/webapp/WEB-INF/web.xml
+++ b/studentregister/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,13 @@
     	<servlet-name>studentclassServlet</servlet-name>
     	<servlet-class>com.smartglossa.student.studentclassServlet</servlet-class>
     </servlet>
+    <servlet>
+    	<description>
+    	</description>
+    	<display-name>attendencsServlet</display-name>
+    	<servlet-name>attendencsServlet</servlet-name>
+    	<servlet-class>com.smartglossa.student.attendencsServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
     	<servlet-name>studentServlet</servlet-name>
     	<url-pattern>/student</url-pattern>
@@ -29,6 +36,10 @@
     <servlet-mapping>
     	<servlet-name>studentclassServlet</servlet-name>
     	<url-pattern>/student</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+    	<servlet-name>attendencsServlet</servlet-name>
+    	<url-pattern>/attendence</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
