--- a/studentregister/src/main/webapp/WEB-INF/web.xml
+++ b/studentregister/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,13 @@
     	<servlet-name>genderServlet</servlet-name>
     	<servlet-class>com.smartglossa.student.genderServlet</servlet-class>
     </servlet>
+    <servlet>
+    	<description>
+    	</description>
+    	<display-name>courseServlet</display-name>
+    	<servlet-name>courseServlet</servlet-name>
+    	<servlet-class>com.smartglossa.courseServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
     	<servlet-name>studentServlet</servlet-name>
     	<url-pattern>/students</url-pattern>
@@ -51,6 +58,10 @@
     <servlet-mapping>
     	<servlet-name>genderServlet</servlet-name>
     	<url-pattern>/gender</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+    	<servlet-name>courseServlet</servlet-name>
+    	<url-pattern>/course</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
